# tdd-kata

./: .gitignore  .gitmodules  README.md  bun.lockb  package-lock.json  package.json  vitest.config.ts
.github/workflows/: unit-test.yaml
c/: CMakeLists.txt  README.md
c/src/: CMakeLists.txt  test-main.cpp
c/src/codewars/: are-the-same.h  are-the-same_test.cpp  bit-counting.cpp  bit-counting.h  dupe-count.h  last_digit_5k.h  last_digit_5k_test.cpp  split_string.h  split_string_test.cpp  string-end-with.cpp  string-end-with.h  sum_digit.h  sum_digit_test.cpp  test-are-the-same.cpp  test-bit-counting.cpp  test-dupe-count.cpp  test-string-end-with.cpp
c/src/leetcode/: arithmetic-subarrays.cpp  arithmetic-subarrays.h  arithmetic-subarrays_test.cpp
esm/: README.md  bun.lockb  index.ts
esm/src/checkio/: blizzard.ts  electronics-station.ts  home.ts  ice-base.ts  initiation.ts  science-expidition.ts
esm/src/codewars/: gap_inprimes.ts  loopers.ts  painfuck.ts  pigIt.ts  vector.ts
esm/tests/algorithms/: algorithms.spec.ts  (+1 more)
haskell/: .gitignore  haskell.cabal  package.yaml  stack.yaml
haskell/app/: Main.hs
rust/: Cargo.toml
rust/lab/: Cargo.toml
rust/lab/src/: lib.rs  (+2 more)
rust/src/: codewars.rs  leetcode.rs  main.rs
src/algorithms/: algorithms.ts
src/checkio/: blizzard.ts  electronics-station.ts  home.ts  ice-base.ts  initiation.ts  mine.ts  science-expidition.ts
tests/algorithms/: algorithms.spec.ts
tests/checkio/: blizzard.spec.ts  electronics-station.spec.ts  home.spec.ts  ice-base.spec.ts  initiation.spec.ts  mine.spec.ts  science-expidition.spec.ts
(+121 files in other folders)
